# sproto-rust

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md
.github/workflows/: ci.yml
.qoder/specs/: lua-binding.md  serde-integration.md  sproto-rust-implementation.md
benches/: benchall.sh  benchmark.rs  sproto_bench.rs
benchmark/: benchmark.rs  sproto_bench.rs
docs/: design.md  development.md  usage.md
sproto-derive/: Cargo.toml
sproto-derive/src/: attr.rs  decode.rs  encode.rs  lib.rs
sproto-lua/: Cargo.toml
sproto-lua/src/: conversion.rs  error.rs  lib.rs  lua_codec.rs  userdata.rs
sproto-lua/tests/: spec.lua
src/: binary_schema.rs  codegen.rs  derive_traits.rs  error.rs  lib.rs  pack.rs  schema_traits.rs  types.rs  value.rs
src/codec/: decoder.rs  encoder.rs  mod.rs  wire.rs
src/parser/: ast.rs  grammar.rs  lexer.rs  mod.rs  schema_builder.rs
src/rpc/: mod.rs
src/serde/: de.rs  error.rs  mod.rs  ser.rs
testdata/: build.sh  generate.lua
tests/: binary_schema_tests.rs  compatibility_tests.rs  decode_tests.rs  derive_tests.rs  direct_tests.rs  encode_tests.rs  pack_tests.rs  roundtrip_tests.rs  rpc_tests.rs
tests/testdata/: build.sh  generate.lua  schema.sproto
