[package]
name = "sproto"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the sproto binary serialization protocol"

[features]
default = ["derive"]
serde = ["dep:serde"]
derive = ["dep:sproto-derive", "serde"]

[dependencies]
thiserror = "2"
serde = { version = "1", optional = true }
sproto-derive = { path = "sproto-derive", optional = true }

[dev-dependencies]
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sproto_bench"
harness = false
path = "benchmark/sproto_bench.rs"

[[example]]
name = "benchmark"
path = "benchmark/benchmark.rs"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["sproto-derive", "sproto-lua"]
