[package]
name = "sproto"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the sproto binary serialization protocol"
autobenches = false
autoexamples = false

[dependencies]
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sproto_bench"
harness = false
path = "benches/sproto_bench.rs"

[[example]]
name = "benchmark"
path = "benches/benchmark.rs"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["sproto-lua"]
